@startuml
hide methods

class Tour <<Entity>> {
    id: TourId
    name: String
    description: String
    from: Address
    to: Address
    transportType: TransportType
    distance: double
    estimatedTime: double
    imageUrl: String
    popularity: int
    childFriendliness: ChildFriendliness
}

class TourId <<ValueObject>> {
    id: UUID
}

class Address <<ValueObject>> {
    country: String
    city: String
    zipCode: int
    streetName: String
    streetNumber: String
    latitude: double
    longitude: double
}

enum TransportType {
    BIKE
    HIKE
    RUNNING
    VACATION
}

class ChildFriendliness <<ValueObject>> {
    rating: int
}

class TourLog <<Entity>> {
    id: TourLogId
    tour: Tour
    duration: Duration
    comment: String
    difficulty: Difficulty
    distance: double
    rating: Rating
}

class TourLogId <<ValueObject>> {
    id: UUID
}

class Duration <<ValueObject>> {
    startTime: LocalDateTime
    endTime: LocalDateTime
    duration: double
}

class Difficulty <<ValueObject>> {
    difficulty: int
}

class Rating <<ValueObject>> {
    rating: int
}

Tour -- TourId
Tour -- Address
Tour -- TransportType
Tour -- ChildFriendliness

TourLog -- TourLogId
TourLog "n" o-right-* "1" Tour
TourLog -- Duration
TourLog -- Difficulty
TourLog -- Rating


@enduml